/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java Library project to get you started.
 * For more details take a look at the Java Libraries chapter in the Gradle
 * User Manual available at https://docs.gradle.org/6.3/userguide/java_library_plugin.html
 */

plugins {
    id 'java'
    id 'eclipse'
}


group 'com.scaleton.dfinity'
version '0.5.4'

sourceCompatibility = 1.8

repositories {
    mavenLocal()
    mavenCentral()
}

jar {
    manifest {
        attributes('Implementation-Title': 'dfinity-agent',
                   'Implementation-Version': project.version)
    }
    
    archiveBaseName = 'dfinity-agent'
}

task fatJar(type: Jar) {
    manifest {
        attributes('Implementation-Title': 'dfinity-agent',
                   'Implementation-Version': project.version)
    }
    
    archiveBaseName = 'dfinity-agent-with-dependencies'
    
    from { configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) } }
    with jar
}

test {
    useJUnitPlatform()
    
    exclude '**/*ICTest*'
}

dependencies {
	// https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'

	// https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5
	implementation group: 'org.apache.httpcomponents.client5', name: 'httpclient5', version: '5.1'
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.5'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jdk8
	implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jdk8', version: '2.12.5'
	
	// https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-cbor
	implementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-cbor', version: '2.12.5'

	// https://mvnrepository.com/artifact/org.bouncycastle/bcprov-jdk15on
	implementation group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: '1.69'

	// https://mvnrepository.com/artifact/org.bouncycastle/bcpkix-jdk15on
	implementation group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'

	// https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine
	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.0'
	
	// https://mvnrepository.com/artifact/org.mock-server/mockserver-netty
	testImplementation group: 'org.mock-server', name: 'mockserver-netty', version: '5.11.2'	
	
	// https://mvnrepository.com/artifact/org.mock-server/mockserver-junit-rule
	testImplementation group: 'org.mock-server', name: 'mockserver-junit-jupiter', version: '5.11.2'
	
	// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
	testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.32'			
}
